[project]
name = "ml-toolkit"
version = "0.1.3"
description = "Переиспользуемые ML-примитивы: feature engineering, модели, отбор признаков, оценка/интерпретация"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "numba>=0.59",
    "numpy>=1.26",
    "pyarrow>=14",
    "tqdm>=4.66",
    "matplotlib>=3.10.9",
    "lightgbm>=4.0",
    "shap>=0.44",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "catboost>=1.2",
    "imbalanced-learn>=0.12",
    "deap>=1.4.4",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "optuna>=4.9.0",
    "pytest>=7",
    "seaborn>=0.13.2",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ml_toolkit", "ml_toolkit.*"]

[tool.setuptools.package-data]
ml_toolkit = ["transformers/presets/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
